--- a/angular-frontend/src/app/components/navbar/navbar.component.html
+++ b/angular-frontend/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbarContainer">
   <div class="navbarLeft">
     <a routerLink="" routerLinkActive="active" style="text-decoration: none">
-      <div class="logo">social media</div>
+      <div class="logo">Social Me</div>
     </a>
   </div>
   <div class="navbarCenter">
